// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/layouts/Main/elements/Header/components/Notification render 1`] = `
<React.Fragment>
  <div
    className="makeStyles-clickableIcon-1"
    onClick={[Function]}
  >
    <NotificationOff
      className="icon"
    />
  </div>
  <WithStyles(ForwardRef(Popover))
    anchorEl={null}
    anchorOrigin={
      Object {
        "horizontal": "left",
        "vertical": "bottom",
      }
    }
    classes={
      Object {
        "paper": "makeStyles-root-9",
      }
    }
    onClose={[Function]}
    open={false}
    transformOrigin={
      Object {
        "horizontal": "left",
        "vertical": "top",
      }
    }
  >
    <div
      className="makeStyles-header-2"
    >
      <Typography
        className=""
        color="inherit"
        inline={false}
        variant="h5"
        weight="medium"
      >
        Notification
      </Typography>
    </div>
    <div
      className="makeStyles-itemContainer-4"
      onScroll={[MockFunction]}
    >
      <React.Fragment>
        <div
          className="makeStyles-itemContainer-4"
        >
          <div
            className="makeStyles-item-3"
          >
            <Styled(MuiBox)
              mr={2}
            >
              <Skeleton
                height={40}
                variant="circle"
                width={40}
              />
            </Styled(MuiBox)>
            <div>
              <div
                className="makeStyles-itemHeader-6"
              >
                <Skeleton
                  height={14}
                  variant="rect"
                  width={60}
                />
                <div />
                <Skeleton
                  height={14}
                  variant="rect"
                  width={120}
                />
              </div>
              <Skeleton
                height={14}
                variant="rect"
                width="100%"
              />
              <Styled(MuiBox)
                paddingY={1}
              >
                <Skeleton
                  height={14}
                  variant="rect"
                  width="100%"
                />
              </Styled(MuiBox)>
              <Skeleton
                height={14}
                variant="rect"
                width="100%"
              />
            </div>
          </div>
        </div>
        <div
          className="makeStyles-itemContainer-4"
        >
          <div
            className="makeStyles-item-3"
          >
            <Styled(MuiBox)
              mr={2}
            >
              <Skeleton
                height={40}
                variant="circle"
                width={40}
              />
            </Styled(MuiBox)>
            <div>
              <div
                className="makeStyles-itemHeader-6"
              >
                <Skeleton
                  height={14}
                  variant="rect"
                  width={60}
                />
                <div />
                <Skeleton
                  height={14}
                  variant="rect"
                  width={120}
                />
              </div>
              <Skeleton
                height={14}
                variant="rect"
                width="100%"
              />
              <Styled(MuiBox)
                paddingY={1}
              >
                <Skeleton
                  height={14}
                  variant="rect"
                  width="100%"
                />
              </Styled(MuiBox)>
              <Skeleton
                height={14}
                variant="rect"
                width="100%"
              />
            </div>
          </div>
        </div>
        <div
          className="makeStyles-itemContainer-4"
        >
          <div
            className="makeStyles-item-3"
          >
            <Styled(MuiBox)
              mr={2}
            >
              <Skeleton
                height={40}
                variant="circle"
                width={40}
              />
            </Styled(MuiBox)>
            <div>
              <div
                className="makeStyles-itemHeader-6"
              >
                <Skeleton
                  height={14}
                  variant="rect"
                  width={60}
                />
                <div />
                <Skeleton
                  height={14}
                  variant="rect"
                  width={120}
                />
              </div>
              <Skeleton
                height={14}
                variant="rect"
                width="100%"
              />
              <Styled(MuiBox)
                paddingY={1}
              >
                <Skeleton
                  height={14}
                  variant="rect"
                  width="100%"
                />
              </Styled(MuiBox)>
              <Skeleton
                height={14}
                variant="rect"
                width="100%"
              />
            </div>
          </div>
        </div>
        <div
          className="makeStyles-itemContainer-4"
        >
          <div
            className="makeStyles-item-3"
          >
            <Styled(MuiBox)
              mr={2}
            >
              <Skeleton
                height={40}
                variant="circle"
                width={40}
              />
            </Styled(MuiBox)>
            <div>
              <div
                className="makeStyles-itemHeader-6"
              >
                <Skeleton
                  height={14}
                  variant="rect"
                  width={60}
                />
                <div />
                <Skeleton
                  height={14}
                  variant="rect"
                  width={120}
                />
              </div>
              <Skeleton
                height={14}
                variant="rect"
                width="100%"
              />
              <Styled(MuiBox)
                paddingY={1}
              >
                <Skeleton
                  height={14}
                  variant="rect"
                  width="100%"
                />
              </Styled(MuiBox)>
              <Skeleton
                height={14}
                variant="rect"
                width="100%"
              />
            </div>
          </div>
        </div>
        <div
          className="makeStyles-itemContainer-4"
        >
          <div
            className="makeStyles-item-3"
          >
            <Styled(MuiBox)
              mr={2}
            >
              <Skeleton
                height={40}
                variant="circle"
                width={40}
              />
            </Styled(MuiBox)>
            <div>
              <div
                className="makeStyles-itemHeader-6"
              >
                <Skeleton
                  height={14}
                  variant="rect"
                  width={60}
                />
                <div />
                <Skeleton
                  height={14}
                  variant="rect"
                  width={120}
                />
              </div>
              <Skeleton
                height={14}
                variant="rect"
                width="100%"
              />
              <Styled(MuiBox)
                paddingY={1}
              >
                <Skeleton
                  height={14}
                  variant="rect"
                  width="100%"
                />
              </Styled(MuiBox)>
              <Skeleton
                height={14}
                variant="rect"
                width="100%"
              />
            </div>
          </div>
        </div>
        <div
          className="makeStyles-itemContainer-4"
        >
          <div
            className="makeStyles-item-3"
          >
            <Styled(MuiBox)
              mr={2}
            >
              <Skeleton
                height={40}
                variant="circle"
                width={40}
              />
            </Styled(MuiBox)>
            <div>
              <div
                className="makeStyles-itemHeader-6"
              >
                <Skeleton
                  height={14}
                  variant="rect"
                  width={60}
                />
                <div />
                <Skeleton
                  height={14}
                  variant="rect"
                  width={120}
                />
              </div>
              <Skeleton
                height={14}
                variant="rect"
                width="100%"
              />
              <Styled(MuiBox)
                paddingY={1}
              >
                <Skeleton
                  height={14}
                  variant="rect"
                  width="100%"
                />
              </Styled(MuiBox)>
              <Skeleton
                height={14}
                variant="rect"
                width="100%"
              />
            </div>
          </div>
        </div>
        <div
          className="makeStyles-itemContainer-4"
        >
          <div
            className="makeStyles-item-3"
          >
            <Styled(MuiBox)
              mr={2}
            >
              <Skeleton
                height={40}
                variant="circle"
                width={40}
              />
            </Styled(MuiBox)>
            <div>
              <div
                className="makeStyles-itemHeader-6"
              >
                <Skeleton
                  height={14}
                  variant="rect"
                  width={60}
                />
                <div />
                <Skeleton
                  height={14}
                  variant="rect"
                  width={120}
                />
              </div>
              <Skeleton
                height={14}
                variant="rect"
                width="100%"
              />
              <Styled(MuiBox)
                paddingY={1}
              >
                <Skeleton
                  height={14}
                  variant="rect"
                  width="100%"
                />
              </Styled(MuiBox)>
              <Skeleton
                height={14}
                variant="rect"
                width="100%"
              />
            </div>
          </div>
        </div>
        <div
          className="makeStyles-itemContainer-4"
        >
          <div
            className="makeStyles-item-3"
          >
            <Styled(MuiBox)
              mr={2}
            >
              <Skeleton
                height={40}
                variant="circle"
                width={40}
              />
            </Styled(MuiBox)>
            <div>
              <div
                className="makeStyles-itemHeader-6"
              >
                <Skeleton
                  height={14}
                  variant="rect"
                  width={60}
                />
                <div />
                <Skeleton
                  height={14}
                  variant="rect"
                  width={120}
                />
              </div>
              <Skeleton
                height={14}
                variant="rect"
                width="100%"
              />
              <Styled(MuiBox)
                paddingY={1}
              >
                <Skeleton
                  height={14}
                  variant="rect"
                  width="100%"
                />
              </Styled(MuiBox)>
              <Skeleton
                height={14}
                variant="rect"
                width="100%"
              />
            </div>
          </div>
        </div>
        <div
          className="makeStyles-itemContainer-4"
        >
          <div
            className="makeStyles-item-3"
          >
            <Styled(MuiBox)
              mr={2}
            >
              <Skeleton
                height={40}
                variant="circle"
                width={40}
              />
            </Styled(MuiBox)>
            <div>
              <div
                className="makeStyles-itemHeader-6"
              >
                <Skeleton
                  height={14}
                  variant="rect"
                  width={60}
                />
                <div />
                <Skeleton
                  height={14}
                  variant="rect"
                  width={120}
                />
              </div>
              <Skeleton
                height={14}
                variant="rect"
                width="100%"
              />
              <Styled(MuiBox)
                paddingY={1}
              >
                <Skeleton
                  height={14}
                  variant="rect"
                  width="100%"
                />
              </Styled(MuiBox)>
              <Skeleton
                height={14}
                variant="rect"
                width="100%"
              />
            </div>
          </div>
        </div>
        <div
          className="makeStyles-itemContainer-4"
        >
          <div
            className="makeStyles-item-3"
          >
            <Styled(MuiBox)
              mr={2}
            >
              <Skeleton
                height={40}
                variant="circle"
                width={40}
              />
            </Styled(MuiBox)>
            <div>
              <div
                className="makeStyles-itemHeader-6"
              >
                <Skeleton
                  height={14}
                  variant="rect"
                  width={60}
                />
                <div />
                <Skeleton
                  height={14}
                  variant="rect"
                  width={120}
                />
              </div>
              <Skeleton
                height={14}
                variant="rect"
                width="100%"
              />
              <Styled(MuiBox)
                paddingY={1}
              >
                <Skeleton
                  height={14}
                  variant="rect"
                  width="100%"
                />
              </Styled(MuiBox)>
              <Skeleton
                height={14}
                variant="rect"
                width="100%"
              />
            </div>
          </div>
        </div>
      </React.Fragment>
    </div>
  </WithStyles(ForwardRef(Popover))>
</React.Fragment>
`;

exports[`src/layouts/Main/elements/Header/components/Notification render/loading 1`] = `
<React.Fragment>
  <div
    className="makeStyles-clickableIcon-19"
    onClick={[Function]}
  >
    <NotificationOn
      className="icon"
    />
  </div>
  <WithStyles(ForwardRef(Popover))
    anchorEl={null}
    anchorOrigin={
      Object {
        "horizontal": "left",
        "vertical": "bottom",
      }
    }
    classes={
      Object {
        "paper": "makeStyles-root-27",
      }
    }
    onClose={[Function]}
    open={false}
    transformOrigin={
      Object {
        "horizontal": "left",
        "vertical": "top",
      }
    }
  >
    <div
      className="makeStyles-header-20"
    >
      <Typography
        className=""
        color="inherit"
        inline={false}
        variant="h5"
        weight="medium"
      >
        Notification
      </Typography>
    </div>
    <div
      className="makeStyles-itemContainer-22"
      onScroll={[MockFunction]}
    >
      <React.Fragment />
      <React.Fragment>
        <div
          className="makeStyles-itemContainer-22"
        >
          <div
            className="makeStyles-item-21"
          >
            <Styled(MuiBox)
              mr={2}
            >
              <Skeleton
                height={40}
                variant="circle"
                width={40}
              />
            </Styled(MuiBox)>
            <div>
              <div
                className="makeStyles-itemHeader-24"
              >
                <Skeleton
                  height={14}
                  variant="rect"
                  width={60}
                />
                <div />
                <Skeleton
                  height={14}
                  variant="rect"
                  width={120}
                />
              </div>
              <Skeleton
                height={14}
                variant="rect"
                width="100%"
              />
              <Styled(MuiBox)
                paddingY={1}
              >
                <Skeleton
                  height={14}
                  variant="rect"
                  width="100%"
                />
              </Styled(MuiBox)>
              <Skeleton
                height={14}
                variant="rect"
                width="100%"
              />
            </div>
          </div>
        </div>
        <div
          className="makeStyles-itemContainer-22"
        >
          <div
            className="makeStyles-item-21"
          >
            <Styled(MuiBox)
              mr={2}
            >
              <Skeleton
                height={40}
                variant="circle"
                width={40}
              />
            </Styled(MuiBox)>
            <div>
              <div
                className="makeStyles-itemHeader-24"
              >
                <Skeleton
                  height={14}
                  variant="rect"
                  width={60}
                />
                <div />
                <Skeleton
                  height={14}
                  variant="rect"
                  width={120}
                />
              </div>
              <Skeleton
                height={14}
                variant="rect"
                width="100%"
              />
              <Styled(MuiBox)
                paddingY={1}
              >
                <Skeleton
                  height={14}
                  variant="rect"
                  width="100%"
                />
              </Styled(MuiBox)>
              <Skeleton
                height={14}
                variant="rect"
                width="100%"
              />
            </div>
          </div>
        </div>
      </React.Fragment>
    </div>
  </WithStyles(ForwardRef(Popover))>
</React.Fragment>
`;

exports[`src/layouts/Main/elements/Header/components/Notification render/with data 1`] = `
<React.Fragment>
  <div
    className="makeStyles-clickableIcon-28"
    onClick={[Function]}
  >
    <NotificationOff
      className="icon"
    />
  </div>
  <WithStyles(ForwardRef(Popover))
    anchorEl={null}
    anchorOrigin={
      Object {
        "horizontal": "left",
        "vertical": "bottom",
      }
    }
    classes={
      Object {
        "paper": "makeStyles-root-36",
      }
    }
    onClose={[Function]}
    open={false}
    transformOrigin={
      Object {
        "horizontal": "left",
        "vertical": "top",
      }
    }
  >
    <div
      className="makeStyles-header-29"
    >
      <Typography
        className=""
        color="inherit"
        inline={false}
        variant="h5"
        weight="medium"
      >
        Notification
      </Typography>
    </div>
    <div
      className="makeStyles-itemContainer-31"
      onScroll={[MockFunction]}
    >
      <React.Fragment>
        <div
          className="makeStyles-item-30 makeStyles-itemUnread-35"
          onClick={[Function]}
        >
          <div
            className="makeStyles-itemIcon-34"
          >
            <ServiceAssurance
              className="icon"
            />
          </div>
          <div>
            <div
              className="makeStyles-itemHeader-33"
            >
              <Typography
                className=""
                color="inherit"
                inline={false}
                variant="caption"
                weight="bold"
              >
                Assurance Ticket
              </Typography>
              <div />
              <Typography
                className=""
                color="general-light"
                inline={false}
                variant="caption"
                weight="normal"
              >
                -
              </Typography>
            </div>
            <Typography
              className="makeStyles-itemContent-32"
              color="general-mid"
              inline={false}
              variant="subtitle2"
              weight="normal"
            >
              <React.Fragment>
                <span
                  style={
                    Object {
                      "color": "#DE1B1B",
                      "fontWeight": "bold",
                    }
                  }
                >
                  [
                  ]
                </span>
              </React.Fragment>
            </Typography>
          </div>
        </div>
        <div
          className="makeStyles-item-30 makeStyles-itemUnread-35"
          onClick={[Function]}
        >
          <div
            className="makeStyles-itemIcon-34"
          >
            <Link
              className="icon"
            />
          </div>
          <div>
            <div
              className="makeStyles-itemHeader-33"
            >
              <Typography
                className=""
                color="inherit"
                inline={false}
                variant="caption"
                weight="bold"
              >
                Link
              </Typography>
              <div />
              <Typography
                className=""
                color="general-light"
                inline={false}
                variant="caption"
                weight="normal"
              >
                -
              </Typography>
            </div>
            <Typography
              className="makeStyles-itemContent-32"
              color="general-mid"
              inline={false}
              variant="subtitle2"
              weight="normal"
            >
              
            </Typography>
          </div>
        </div>
        <div
          className="makeStyles-item-30 makeStyles-itemUnread-35"
          onClick={[Function]}
        >
          <div
            className="makeStyles-itemIcon-34"
          >
            <Lba
              className="icon"
            />
          </div>
          <div>
            <div
              className="makeStyles-itemHeader-33"
            >
              <Typography
                className=""
                color="inherit"
                inline={false}
                variant="caption"
                weight="bold"
              >
                LBA
              </Typography>
              <div />
              <Typography
                className=""
                color="general-light"
                inline={false}
                variant="caption"
                weight="normal"
              >
                -
              </Typography>
            </div>
            <Typography
              className="makeStyles-itemContent-32"
              color="general-mid"
              inline={false}
              variant="subtitle2"
              weight="normal"
            >
              
            </Typography>
          </div>
        </div>
        <div
          className="makeStyles-item-30 makeStyles-itemUnread-35"
          onClick={[Function]}
        >
          <div
            className="makeStyles-itemIcon-34"
          >
            <SenderId
              className="icon"
            />
          </div>
          <div>
            <div
              className="makeStyles-itemHeader-33"
            >
              <Typography
                className=""
                color="inherit"
                inline={false}
                variant="caption"
                weight="bold"
              >
                Sender ID
              </Typography>
              <div />
              <Typography
                className=""
                color="general-light"
                inline={false}
                variant="caption"
                weight="normal"
              >
                -
              </Typography>
            </div>
            <Typography
              className="makeStyles-itemContent-32"
              color="general-mid"
              inline={false}
              variant="subtitle2"
              weight="normal"
            >
              
            </Typography>
          </div>
        </div>
        <div
          className="makeStyles-item-30 makeStyles-itemUnread-35"
          onClick={[Function]}
        >
          <div
            className="makeStyles-itemIcon-34"
          >
            <PurchaseOrder
              className="icon"
            />
          </div>
          <div>
            <div
              className="makeStyles-itemHeader-33"
            >
              <Typography
                className=""
                color="inherit"
                inline={false}
                variant="caption"
                weight="bold"
              >
                Purchase Order
              </Typography>
              <div />
              <Typography
                className=""
                color="general-light"
                inline={false}
                variant="caption"
                weight="normal"
              >
                -
              </Typography>
            </div>
            <Typography
              className="makeStyles-itemContent-32"
              color="general-mid"
              inline={false}
              variant="subtitle2"
              weight="normal"
            >
              <span>
                You receive a 
                <strong>
                  Purchase Order
                </strong>
                 (PO) from
                 
                <strong>
                   
                </strong>
                with order number 
                <strong />
                . Please check it.
              </span>
            </Typography>
          </div>
        </div>
        <div
          className="makeStyles-item-30 makeStyles-itemUnread-35"
          onClick={[Function]}
        >
          <div
            className="makeStyles-itemIcon-34"
          >
            <Baso
              className="icon"
            />
          </div>
          <div>
            <div
              className="makeStyles-itemHeader-33"
            >
              <Typography
                className=""
                color="inherit"
                inline={false}
                variant="caption"
                weight="bold"
              >
                BASO
              </Typography>
              <div />
              <Typography
                className=""
                color="general-light"
                inline={false}
                variant="caption"
                weight="normal"
              >
                -
              </Typography>
            </div>
            <Typography
              className="makeStyles-itemContent-32"
              color="general-mid"
              inline={false}
              variant="subtitle2"
              weight="normal"
            >
              <span>
                <strong />
                 has assigned Berita Acara for
                <strong>
                   
                </strong>
                 with
                <strong>
                   
                </strong>
                 - Berita Acara
                <strong>
                   
                  Not Completed
                </strong>
                . Please check it.
              </span>
            </Typography>
          </div>
        </div>
        <div
          className="makeStyles-item-30 makeStyles-itemUnread-35"
          onClick={[Function]}
        >
          <div
            className="makeStyles-itemIcon-34"
          >
            <Baso
              className="icon"
            />
          </div>
          <div>
            <div
              className="makeStyles-itemHeader-33"
            >
              <Typography
                className=""
                color="inherit"
                inline={false}
                variant="caption"
                weight="bold"
              >
                BASO
              </Typography>
              <div />
              <Typography
                className=""
                color="general-light"
                inline={false}
                variant="caption"
                weight="normal"
              >
                -
              </Typography>
            </div>
            <Typography
              className="makeStyles-itemContent-32"
              color="general-mid"
              inline={false}
              variant="subtitle2"
              weight="normal"
            >
              <span>
                <strong />
                 has assigned Berita Acara for
                <strong>
                   
                </strong>
                 with
                <strong>
                   
                </strong>
                 - Berita Acara
                <strong>
                   
                  Completed
                </strong>
                . Please check it.
              </span>
            </Typography>
          </div>
        </div>
        <div
          className="makeStyles-item-30 makeStyles-itemUnread-35"
          onClick={[Function]}
        >
          <div
            className="makeStyles-itemIcon-34"
          >
            <UserManagement
              className="icon"
            />
          </div>
          <div>
            <div
              className="makeStyles-itemHeader-33"
            >
              <Typography
                className=""
                color="inherit"
                inline={false}
                variant="caption"
                weight="bold"
              >
                User Management
              </Typography>
              <div />
              <Typography
                className=""
                color="general-light"
                inline={false}
                variant="caption"
                weight="normal"
              >
                -
              </Typography>
            </div>
            <Typography
              className="makeStyles-itemContent-32"
              color="general-mid"
              inline={false}
              variant="subtitle2"
              weight="normal"
            >
              <span>
                
                 
                <strong>
                   
                   .
                </strong>
                 Please check it.
              </span>
            </Typography>
          </div>
        </div>
        <div
          className="makeStyles-item-30 makeStyles-itemUnread-35"
          onClick={[Function]}
        >
          <div
            className="makeStyles-itemIcon-34"
          >
            <Phone
              className="icon"
            />
          </div>
          <div>
            <div
              className="makeStyles-itemHeader-33"
            >
              <Typography
                className=""
                color="inherit"
                inline={false}
                variant="caption"
                weight="bold"
              >
                title
              </Typography>
              <div />
              <Typography
                className=""
                color="general-light"
                inline={false}
                variant="caption"
                weight="normal"
              >
                -
              </Typography>
            </div>
            <Typography
              className="makeStyles-itemContent-32"
              color="general-mid"
              inline={false}
              variant="subtitle2"
              weight="normal"
            >
              
            </Typography>
          </div>
        </div>
      </React.Fragment>
    </div>
  </WithStyles(ForwardRef(Popover))>
</React.Fragment>
`;
